--- a/src/views/html/details.ejs
+++ b/src/views/html/details.ejs
@@ -25,7 +25,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Details</title>
-    <link rel="icon" href="https://internshala.com//favicon.ico?v=5" />
+    <link rel="icon" href= 
+    "https://developers.google.com/static/identity/images/branding_guideline_sample_lt_rd_sl.svg" 
+              type="image/x-icon"> 
   </head>
 
   <body>
