--- a/src/views/html/resumePage.ejs
+++ b/src/views/html/resumePage.ejs
@@ -4,7 +4,6 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" href="https://internshala.com//favicon.ico?v=5" />
         <link rel="stylesheet" href="/static/css/resumePage.css" />
         <link rel="stylesheet" href="/static/css/nev_bar_style.css" /> 
         <link rel="stylesheet" href="/static/css/main.css" />
@@ -12,6 +11,9 @@
         <script src="https://kit.fontawesome.com/996973c893.js"></script>
 
         <title>Student Resume</title>
+        <link rel="icon" href= 
+    "https://developers.google.com/static/identity/images/branding_guideline_sample_lt_rd_sl.svg" 
+              type="image/x-icon"> 
     </head>
     <body>
         
@@ -46,25 +48,25 @@
             <div class="header">
                 <div class="header-left">
                     <div class="name">
-                        <h1 id="firstNameR" class="first-name">Vishal</h1>
-                        <h1 id ="lastNameR" class="last-name">Sinha</h1>
+                        <h1 id="firstNameR" class="first-name">ABC</h1>
+                        <h1 id ="lastNameR" class="last-name">Malik</h1>
                     </div>
                 </div>
                 <div class="header-right">
                     <div class="email">
-                        <p id="emailResume">sinha062@masaischool.com</p>
+                        <p id="emailResume">abc@xyz.com</p>
                         <i class="fas fa-envelope"></i>
                     </div>
                     <div class="linkedin">
-                        <p id="linkedinResume">linkedin.com/in/vishalSinha1527/</p>
+                        <p id="linkedinResume">linkedin.com/in/abckumar/</p>
                         <i class="fab fa-linkedin"></i>
                     </div>
                     <div class="github">
-                        <p id="gitHubResume">github.com/vishal062</p>
+                        <p id="gitHubResume">github.com/xyz</p>
                         <i class="fab fa-github"></i>
                     </div>
                     <div class="phone">
-                        <p>+91-99-876-54321</p>
+                        <p>+91999999999</p>
                         <i class="fas fa-phone"></i>
                     </div>
                 </div>
@@ -97,21 +99,21 @@
                         <th>Percentage/GPA</th>
                     </tr>
                     <tr>
-                        <td>BCA</td>
+                        <td>ABC</td>
                         <td>XYZ</td>
-                        <td>2018</td>
+                        <td>2021</td>
                         <td>95%</td>
                     </tr>
                     <tr>
-                        <td>Intermediate</td>
+                        <td>GHI</td>
                         <td>XYZ</td>
-                        <td>2015</td>
+                        <td>2019</td>
                         <td>95%</td>
                     </tr>
                     <tr>
-                        <td>SSC</td>
+                        <td>abch</td>
                         <td>XYZ</td>
-                        <td>2013</td>
+                        <td>2017</td>
                         <td>95%</td>
                     </tr>
                 </table>
