--- a/src/views/html/students_reg.ejs
+++ b/src/views/html/students_reg.ejs
@@ -22,6 +22,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="icon" href= 
+    "https://developers.google.com/static/identity/images/branding_guideline_sample_lt_rd_sl.svg" 
+              type="image/x-icon"> 
   </head>
   <body>
   
